# chatguru

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  Makefile  README.md  docker-compose.yml  env.example  litellm_models.example.json  litellm_models.json  mcp.servers.example.json  pyproject.toml
.cursor/rules/: run-precommit-after-task.mdc
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-containers.yml  pre-commit.yml  publish-backend-image.yml  security-scaner.yml
docker/: Dockerfile  Dockerfile.db  Dockerfile.frontend  Dockerfile.mongodb  entrypoint.sh  nginx.conf
docs/: architecture.md  attachment-storage.md  design-decisions.md  document-rag.md  mcp.md  persistence.md  prd-document-rag-repository.md  rag_eval_readme.md  security.md
docs/superpowers/specs/: 2026-07-02-litellm-integration-design.md
evaluation/rag_eval/: run_rag_eval.py  streamlit_rag_eval.py  test_rag_dataset.py
evaluation/ragas/: run_ragas_llm_eval.py  test_ragas_dataset.py
frontend/: .gitignore  biome.jsonc  env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  test-setup.ts  vite-env.d.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/branding/: logo.tsx
frontend/src/components/chat/: AttachmentChip.tsx  ChatInput.tsx  ChatMessage.tsx  ModelSelector.tsx
frontend/src/components/modals/: FeedbackModal.tsx  MarkdownViewerModal.tsx  PdfViewerModal.tsx  RequestAccessModal.tsx  SourceViewerModal.tsx  ThumbsDownModal.tsx
frontend/src/components/sidebar/: AppSidebar.tsx  SourcesSidebar.tsx
frontend/src/components/ui/: index.ts
frontend/src/components/ui/avatar/: avatar.tsx
frontend/src/components/ui/badge/: badge.test.tsx  (+1 more)
frontend/src/hooks/: useAuth.ts  useChat.ts  useCopyToClipboard.ts  useFeedback.ts  useModels.ts  usePersistedHistory.ts  useSuggestions.ts
frontend/src/layouts/: Header.tsx  RootLayout.tsx
frontend/src/pages/: ChatPage.tsx  ErrorPage.tsx  PolicyPage.tsx  SettingsPage.tsx  UnauthorizedPage.tsx
frontend/src/router/: routes.tsx
frontend/src/store/: appStore.ts  authStore.ts
frontend/src/styles/: global.css  tokens.css
frontend/src/types/: chat.ts
frontend/src/utils/: citationLinks.ts  documentProcessing.ts  markdownProseClass.ts  sourceMapping.ts  utils.ts  visitorId.ts
infra/bicep/: container-app.bicep
infra/parameters/: staging.parameters.json
promptfoo/: __init__.py  promptfooconfig.yaml  provider.py
promptfoo/tests/: basic_greeting.yaml  edge_cases.yaml  helpfulness.yaml
src/: __init__.py  config.py  embeddings.py  main.py  tracing.py
src/agent/: __init__.py  prompt.py  service.py  title_service.py
src/api/: __init__.py  errors.py  main.py  utils.py
src/api/routes/: __init__.py  chat.py  documents.py  history.py
src/api/templates/: index.html
src/attachment_storage/: __init__.py  base.py  bootstrap.py  factory.py  filesystem.py
src/document_processing/: service.py
src/document_rag/: __init__.py  bootstrap.py  embeddings.py  factory.py  models.py  repository.py
src/document_rag/adapters/: __init__.py  cosmos.py  mongodb.py
src/document_rag/ingestion/: __init__.py  cli.py  factory.py  repository.py
src/document_rag/ingestion/adapters/: __init__.py  cosmos.py  mongodb.py
src/mcp_integration/: __init__.py  bootstrap.py  config_loader.py  session.py
src/persistence/: __init__.py  bootstrap.py  factory.py  models.py  repository.py  validation.py
src/persistence/sqlalchemy/: __init__.py  alembic.ini  engine.py  migrate.py  repository.py  tables.py
src/persistence/sqlalchemy/alembic/: env.py
src/rag/: __init__.py  documents.py  products.json  simple_retriever.py
src/rate_limiting/: __init__.py  bootstrap.py
src/title_generation/: __init__.py  bootstrap.py  factory.py  prompt.py  repository.py  utils.py
src/title_generation/adapters/: __init__.py  fallback.py  llm.py  openai.py
src/vector_db/: __init__.py  api.py  base.py  factory.py  mongodb.py  mongodb_store.py  sqlite.py  store.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_attachment_storage.py  test_document_processing.py  test_document_rag.py  test_document_rag_cosmos_adapter.py  test_document_rag_cosmos_config.py  test_document_rag_cosmos_factory.py  test_document_rag_cosmos_ingestion.py  test_document_rag_ingest.py  test_document_rag_mongodb_ingestion.py  test_documents.py  test_litellm.py  test_mcp_integration.py  test_persistence.py  test_prompt_fallback.py  test_rate_limiting.py  test_title_service.py  test_tracing.py
(+26 files in other folders)
